# morse_notes_international

./: README.md  pyproject.toml
src/morse_notes_international/: __init__.py  arduino_interperter.py  arduino_zender.py  gui_zender.py  model_interperter.py  model_zender.py
