[project]
name = "morse-notes-international"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Zakariya Marzouk", email = "zakariya@marzouk.nl" }
]
requires-python = ">=3.13"
dependencies = [
    "pyserial>=3.5",
    "pyvisa>=1.15.0",
    "pyvisa-py>=0.8.1",
]

[project.scripts]
morse-notes-international = "morse_notes_international:main"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"
